crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__editor__add_editor_launch_failure.snap
---
source: crates/engram-cli/tests/cli/snapshot/editor.rs
expression: "f.run_with_editor(&[\"add\", \"-e\"], \"/nonexistent/editor\")"
---
$ engramdb --no-maintenance --dir [PROJECT] add -e
exit: 1
--- stdout ---
--- stderr ---
Error: Failed to launch editor '/nonexistent/editor'

Caused by:
    No such file or directory (os error 2)
