crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__editor__add_editor_missing_required_field.snap
---
source: crates/engram-cli/tests/cli/snapshot/editor.rs
expression: "f.run_with_editor(&[\"add\", \"-e\"], &editor_arg(&editor))"
---
$ engramdb --no-maintenance --dir [PROJECT] add -e
exit: 1
--- stdout ---
--- stderr ---
Error: Summary is required
