crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__editor__add_editor_unparseable_env.snap
---
source: crates/engram-cli/tests/cli/snapshot/editor.rs
expression: "f.run_with_editor(&[\"add\", \"-e\"], \"'\")"
---
$ engramdb --no-maintenance --dir [PROJECT] add -e
exit: 1
--- stdout ---
--- stderr ---
Error: Invalid EDITOR value ''': missing closing quote
