crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__editor__update_editor_no_op_quit.snap
---
source: crates/engram-cli/tests/cli/snapshot/editor.rs
expression: "f.run_with_editor(&[\"update\", &id, \"-e\"], &editor_arg(&editor))"
---
$ engramdb --no-maintenance --dir [PROJECT] update [UUID] -e
exit: 0
--- stdout ---
{
  "message": "Edited memory [UUID] with [PROJECT]/look-only.sh",
  "success": true
}
--- stderr ---
