crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__editor__update_editor_nonzero_exit.snap
---
source: crates/engram-cli/tests/cli/snapshot/editor.rs
expression: "f.run_with_editor(&[\"update\", &id, \"-e\"], &editor_arg(&editor))"
---
$ engramdb --no-maintenance --dir [PROJECT] update [UUID] -e
exit: 1
--- stdout ---
--- stderr ---
Error: Editor exited with non-zero status
