crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__editor__update_editor_unknown_id.snap
---
source: crates/engram-cli/tests/cli/snapshot/editor.rs
expression: "f.run_with_editor(&[\"update\", \"no-such-memory\", \"-e\"], &editor_arg(&editor))"
---
$ engramdb --no-maintenance --dir [PROJECT] update no-such-memory -e
exit: 1
--- stdout ---
--- stderr ---
Error: Memory no-such-memory not found
