crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__editor__update_editor_with_tags.snap
---
source: crates/engram-cli/tests/cli/snapshot/editor.rs
expression: "f.run_with_editor(&[\"update\", &id, \"-e\", \"--tags\", \"imports\"],\n&editor_arg(&editor))"
---
$ engramdb --no-maintenance --dir [PROJECT] update [UUID] -e --tags imports
exit: 1
--- stdout ---
{
  "message": "Edited memory [UUID] with [PROJECT]/widen-content.sh",
  "success": true
}
--- stderr ---
editing [PROJECT]/.engramdb/memories/prefer-explicit-imports_[UUID].md
Error: Failed to send embed request to Ollama

Caused by:
    0: error sending request for url (http://localhost:11434/api/embed)
    1: client error (Connect)
    2: tcp connect error
    3: Connection refused (os error 111)
